# src/main/java/com/safenetpay/department/controller/WebVerticle.java
@@ -1,8 +1,13 @@
 package com.safenetpay.department.controller;
 
+import com.safenetpay.department.dao.DataBaseVerticle;
+import com.safenetpay.department.dao.Repository;
+
+import io.netty.handler.codec.http.HttpHeaderValues;
 import io.vertx.core.AbstractVerticle;
 import io.vertx.core.Future;
 import io.vertx.core.Promise;
+import io.vertx.core.http.HttpHeaders;
 import io.vertx.core.http.HttpServer;
 import io.vertx.core.json.JsonObject;
 import io.vertx.ext.web.Router;
@@ -10,6 +15,9 @@ import io.vertx.ext.web.RoutingContext;
 import io.vertx.ext.web.handler.StaticHandler;
 
 public class WebVerticle extends AbstractVerticle {
+
+  private final Repository repository = new DataBaseVerticle();
+
     @Override
     public void start(Promise<Void> startPromise) throws Exception {
         configureRouter()
@@ -24,29 +32,46 @@ public class WebVerticle extends AbstractVerticle {
     router.get("/api/employee/list").handler(this::getEmployees);
     router.post("/api/employee").handler(this::saveEmployee);
     router.put("/api/employee").handler(this::updateEmployee);
-    router.get("/api/department/list").handler(this::getEmployees);
-    router.post("/api/department").handler(this::saveEmployee);
-    router.put("/api/department").handler(this::updateEmployee);
-    router.get("/api/department/list").handler(this::getEmployees);
-    router.post("/api/department").handler(this::saveEmployee);
-    router.put("/api/department").handler(this::updateEmployee);
+    router.get("/api/department/list").handler(this::getDepartment);
+    router.post("/api/department").handler(this::saveDepartment);
+    router.put("/api/department").handler(this::updateDepartment);
+    router.get("/api/task/list").handler(this::getTask);
+    router.post("/api/task").handler(this::saveTask);
+    router.put("/api/task").handler(this::updateTask);
     promise.complete(router);
     return promise.future();
   }
 
-  private Object updateEmployee(RoutingContext rc) {
+  private void updateTask(RoutingContext rc) {
 
-    return null;
   }
 
-  private Object getEmployees(RoutingContext rc) {
-
-    return null;
+  private void saveTask(RoutingContext rc) {
   }
 
-  private Object saveEmployee(RoutingContext rc) {
+  private void getTask(RoutingContext rc) {
+  }
 
-    return null;
+  private void updateDepartment(RoutingContext rc) {
+  }
+
+  private void saveDepartment(RoutingContext rc) {
+  }
+
+  private void getDepartment(RoutingContext rc) {
+  }
+
+  private void updateEmployee(RoutingContext rc) {
+
+  }
+
+  private void getEmployees(RoutingContext rc) {
+    rc.response().putHeader(HttpHeaders.CONTENT_TYPE, HttpHeaderValues.APPLICATION_JSON)
+    .end(repository.)
+  }
+
+  private void saveEmployee(RoutingContext rc) {
+    
   }
 
   private Future<Void> startHTTPServer(Router router) {
